# Compiler

./: CMakeLists.txt  Compiler.sln  main.cpp  test.txt
Compiler/: Compiler.cpp  Compiler.vcxproj  Compiler.vcxproj.filters  ErrorHandler.cpp  ErrorHandler.h  File_reader.cpp  File_reader.h  Lexer.cpp  Lexer.h  Node.h  Nodes.h  Parser.cpp  Parser.h  TerminalPrinter.cpp  TerminalPrinter.h  Token.h  test.txt  tracer.cpp  tracer.h
Parser/: Parser.cpp  ParserToken.h
Parser_Tests/: Parser_Tests.vcxproj  test.cpp
Tree/: Node.cpp  Node.h  Nodes.cpp  Nodes.h  TreeVisitor.cpp  TreeVisitor.h
Utils/: ErrorHanlder.cpp  ErrorHanlder.h  FileReader.cpp  FileReader.h  TerminalPrinter.cpp  TerminalPrinter.h  Tracer.cpp  Tracer.h
interpreter/: StandardLib.cpp  StandardLib.h  interpreter.hpp
lexer/: Lexer.cpp  Lexer.h  Token.h
lexer-tests/: lexer-tests.vcxproj  pch.h  test.cpp
tests/: test-blad-parsera.txt  test-brak-maina.txt  test-klasy-1.txt  test-klasy-2.txt  test-liczba-argumentow.txt  test-niezadeklarowana-zmienna.txt  test-zmienne-i-wyrazenia-1.txt  test-zmienne-i-wyrazenia-2.txt  test-zmienne-i-wyrazenia-3.txt  test-zmienne-i-wyrazenia-4.txt  test.cpp  tests.vcxproj  zła-liczba-argumentow.txt
